Bug 81635 - An extension can't be installed with more than 3 BASIC libraries
Summary: An extension can't be installed with more than 3 BASIC libraries
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Extensions (show other bugs)
Version:
(earliest affected)
4.3.0.3 rc
Hardware: All All
: medium blocker
Assignee: Caolán McNamara
URL:
Whiteboard: target:4.4.0 target:4.3.3
Keywords:
: 79301 (view as bug list)
Depends on:
Blocks: mab4.3
  Show dependency treegraph
 
Reported: 2014-07-22 06:40 UTC by Dorange-Pattoret Didier
Modified: 2014-09-28 17:13 UTC (History)
10 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Cmath.oxt with 3 libraries (1.93 MB, application/vnd.openofficeorg.extension)
2014-07-22 06:40 UTC, Dorange-Pattoret Didier
Details
Cmath.oxt with 4 libraries (1.97 MB, application/vnd.openofficeorg.extension)
2014-07-22 06:41 UTC, Dorange-Pattoret Didier
Details
backtrace of the crash (7.00 KB, text/plain)
2014-07-22 07:15 UTC, Jean-Baptiste Faure
Details
Screenshot DocumentRecovery (6.46 KB, image/png)
2014-07-22 16:22 UTC, pierre-yves samyn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dorange-Pattoret Didier 2014-07-22 06:40:31 UTC
Created attachment 103256 [details]
Cmath.oxt with 3 libraries

I tried to install an extension with more than 3 libraries and I get a crash.

The manifest.xml file :
<?xml version="1.0" encoding="UTF-8"?>
<!DOCTYPE manifest:manifest PUBLIC "-//OpenOffice.org//DTD Manifest 1.0//EN" "Manifest.dtd">
<manifest:manifest>
 <manifest:file-entry manifest:full-path="addon.xcu" manifest:media-type="application/vnd.sun.star.configuration-data"/>
 <manifest:file-entry manifest:media-type="application/vnd.sun.star.configuration-data" manifest:full-path="WriterWindowState.xcu"/>
 <manifest:file-entry manifest:full-path="CmathOOo/" manifest:media-type="application/vnd.sun.star.basic-library"/>
 <manifest:file-entry manifest:full-path="CmInstall/" manifest:media-type="application/vnd.sun.star.basic-library"/>
 <manifest:file-entry manifest:full-path="Dmaths/" manifest:media-type="application/vnd.sun.star.basic-library"/>
 <manifest:file-entry manifest:full-path="Dmaths2/" manifest:media-type="application/vnd.sun.star.basic-library"/>
 <manifest:file-entry manifest:full-path="Accelerators.xcu" manifest:media-type="application/vnd.sun.star.configuration-data"/>
 <manifest:file-entry manifest:full-path="pkg-desc/pkg-description.txt" manifest:media-type="application/vnd.sun.star.package-bundle-description"/>
 <manifest:file-entry manifest:full-path ="Paths.xcu" manifest:media-type="application/vnd.sun.star.configuration-data"/> 
</manifest:manifest>

If I remove this line :
 <manifest:file-entry manifest:full-path="Dmaths2/" manifest:media-type="application/vnd.sun.star.basic-library"/>
it works fine.

I made the same experience with another extension (Dmaths) : I get too a crash with more than 3 libraries.

An another user did not get the problem with LO 4.3.0.2 rc. 
So I think it's a regression between these releases.

Try with the attached files.
Comment 1 Dorange-Pattoret Didier 2014-07-22 06:41:43 UTC
Created attachment 103257 [details]
Cmath.oxt with 4 libraries
Comment 2 Jean-Baptiste Faure 2014-07-22 07:15:06 UTC
Created attachment 103261 [details]
backtrace of the crash

Reproducible for me with LibreOffice 4.3.1.0.0+ (Build ID: f6445efb0e5c3de099f0425825fe1e6e8271dfb9) build at home under Ubuntu 14.04 x86-64

backtrace attached.

Best regards. JBF
Comment 3 Dorange-Pattoret Didier 2014-07-22 08:10:19 UTC
Comment on attachment 103256 [details]
Cmath.oxt with 3 libraries

I do'nt get a crash with 3 libraries.

Links to libraries are in META-INF/manifest.xml.
Comment 4 Dorange-Pattoret Didier 2014-07-22 08:11:04 UTC
Comment on attachment 103257 [details]
Cmath.oxt with 4 libraries

I get a crash with 4 libraries.

Links to libraries are in META-INF/manifest.xml.
Comment 5 pierre-yves samyn 2014-07-22 16:21:33 UTC
Hi

Platform: Windows 7/64 & Version: 4.3.0.3
Build ID: 08ebe52789a201dd7d38ef653ef7a48925e7f9f7

I reproduce the crash with the "4_libraries.oxt"

However, I wonder if the number of libraries is the only cause.
I get also a problem with the "3_libraries" file.

Steps to reproduce:
1. Tools> Extension manager> Add> CmathOOo.oxt (3 libraries)> Open
2. Scroll down> Accept the licence

Expected & actual result CmathOOo 2013.10.29 appears in the list

3. Close the extension manager
4. File> Exit LibreOffice

The Recovery dialog appears (see screenshot). 
I get the same error message after uninstalling the extension.

Perhaps this is due to the removal of the library to create the test file?

Regards
Pierre-Yves
Comment 6 pierre-yves samyn 2014-07-22 16:22:10 UTC
Created attachment 103289 [details]
Screenshot DocumentRecovery
Comment 7 Liouba Leroux 2014-08-25 10:01:43 UTC
I have the same bug with LO 4.3.1.1 on 7x64.
The crash lasts several reboot for every activation of the extension, marked as "unknown status" in the extension manager.
Comment 8 Robinson Tryon (qubit) 2014-09-10 14:06:26 UTC
TESTING with LO 4.3.1.2 + Ubuntu 14.04

(In reply to comment #5)
> Steps to reproduce:
> 1. Tools> Extension manager> Add> CmathOOo.oxt (3 libraries)> Open
> 2. Scroll down> Accept the licence
>
> Expected & actual result CmathOOo 2013.10.29 appears in the list

Yes, confirmed.

> 3. Close the extension manager
> 4. File> Exit LibreOffice
> 

Done
(Got a "pure virtual method called terminate called without an active exception"
error as I quit)

> The Recovery dialog appears (see screenshot). 

NO REPRO: LibreOffice opens up without error or dialog.

I could click on the new buttons in the toolbar without causing an error or crash.

> I get the same error message after uninstalling the extension.

When I clicked the button in the Extension Manager to remove the extension, LibreOffice terminated and I got the same error as before ("pure virtual method called terminate called without an active exception")

When I restarted LibreOffice, CMath was not removed, but included a warning (!) sign and a note "Error: The status of this extension is unknown". Clicking the "Remove" button at this point appeared to successfully remove the extension, and LibreOffice did not terminate.


RESULT:
There might be something fishy with the extension that's causing it to terminate LibreOffice with that "pure virtual method" call, but I'm not seeing a problem installing attachment 103257 [details] (Cmath extension with 4 libs).

JBF/Sophie -- Can you reproduce with one of the latest builds under Linux?
Comment 9 sophie 2014-09-10 14:59:45 UTC
So, I've got a crash with Version: 4.3.1.1
Build ID: c4b15cd4d00dec6b266fa830b4ba73e31ae6ce73 Ubuntu 14.04 X64 and the 4 librairies.oxt file. When lauching LibO again, the extension shows the status: Error the status of this extension is unknown. 
Installing the 3 librairies.oxt extension works well. Will try with the last daily now and will report after my tests. Sophie
Comment 10 sophie 2014-09-10 15:14:02 UTC
I get also a crash with Version: 4.4.0.0.alpha0+
Build ID: e2723d00b77dc1044e2ba599ba93517af34e1ea5
TinderBox: Linux-rpm_deb-x86_64@46-TDF, Branch:master, Time: 2014-09-09_23:17:41 Ubuntu 14.04 x64 and the 4librairies.oxt. 
The only difference is that there is no error message on the status of the extension. 
The 3librairies.oxt crashes also on installation. Sophie
Comment 11 Robinson Tryon (qubit) 2014-09-10 19:49:19 UTC
(In reply to comment #9)
> So, I've got a crash with Version: 4.3.1.1
> Build ID: c4b15cd4d00dec6b266fa830b4ba73e31ae6ce73 Ubuntu 14.04 X64 and the
> 4 librairies.oxt file. When lauching LibO again, the extension shows the
> status: Error the status of this extension is unknown. 

Weird -- I'm seeing different behavior now with 4.3.1.2. When I try to re-install the 2-libraries oxt file, I'm now seeing a crash, whereas I didn't experience the crash the first time I installed the extension.

Any possibility this is linked to the process of removing and then re-installing the OXT?
Comment 12 sophie 2014-09-11 06:46:02 UTC
Hi Robinson, the crashes I experienced was on the first installation of the extensions for both versions. Sophie
Comment 13 Jean-Baptiste Faure 2014-09-13 07:54:51 UTC
Installing the 4-libs extension still crashes the version 4.3.3.0.0+ (Build ID: bea4100cd9ad62637a7ed33488f2a17769aa519a) built at home under Ubuntu 14.04 x86-64
The master (Build ID: a65459eae58f342787abe4c766912f964a8383be) crashes too.

No crash (in master and 4.3) if I remove the problematic extension, close LO, reopen it and install the 3-libs extension.

Best regards. JBF
Comment 14 Commit Notification 2014-09-15 14:05:12 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=9128507579246b1559b0bc195d7e9f89541cbbbf

Resolves: fdo#81635 crash after 3rd call to ApplicationScriptLibraryContainer



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 15 Caolán McNamara 2014-09-15 14:09:44 UTC
*** Bug 79301 has been marked as a duplicate of this bug. ***
Comment 16 Commit Notification 2014-09-15 14:26:01 UTC
Caolan McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-4-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=789d346675f788ce3bfd091bcc96b2ff7ca588de&h=libreoffice-4-3

Resolves: fdo#81635 crash after 3rd call to ApplicationScriptLibraryContainer


It will be available in LibreOffice 4.3.3.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 17 Dorange-Pattoret Didier 2014-09-28 08:08:03 UTC
I tried with : 
Linux-rpm_deb-x86_64@46-TDF, Branch:libreoffice-4-3, Time: 2014-09-26_03:56:08

All seems OK.

Thanks.
Comment 18 Jean-Baptiste Faure 2014-09-28 17:13:58 UTC
Thank you Didier for your test. Set status to verified.

Best regards. JBF