Resolves: fdo#81635 crash after 3rd call to ApplicationScriptLibraryContainer

in PackageImpl::processPackage_

xComponentContext->getServiceManager()->createInstanceWithContext(
                    "com.sun.star.script.ApplicationScriptLibraryContainer"

does not increment the refcount, so on leaving the method the refcount
is decremented by 1, because on the first enter the refcount happens to
be three, then if the extension has more than 3 items in it the refcount
hits 0 here and falls over

some of fdo#79301, fdo#70607, fdo#66706 might be dups of this

regression from 306efefe22e02248eff14f8be2cef68d75d26e55 I believe

Change-Id: I3da50693fe656b68c5555b641d9b32246c8fc208